[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "netguard-server"
path = "src/bin/server.rs"

[dependencies]
anyhow = { workspace = true }
nfq = { workspace = true }
clap = { workspace = true }
pnet = { workspace = true }
libc = { workspace = true }

# crypto
rand = { workspace = true }
rsa = { workspace = true }

# serde
serde = { workspace = true }
toml = { workspace = true }

crypto = { workspace = true }

# data struct
#dashmap = "5.5"
hashbrown = "0.14"

# logger
log = { version = "0.4" }
tracing = { version = "0.1", features = ["std", "log"] }
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "env-filter"] }
humantime = "2.1"

signal-hook = { version = "0.3", features = ["iterator", "extended-siginfo"] }
rlimit = "0.10"

# mallocator
tikv-jemallocator = "0.5"
